# sigdep

./: .gitignore  README.md  pyproject.toml  readme.py
src/sigdep/: __init__.py  sigdep.py
